# lit-poly

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  polynomial.rs
src/polynomial/: dense.rs  dense_dynresidue.rs  dense_polydynresidue.rs  dense_primefield.rs  field.rs  sparse.rs
