[package]
name = "lit-poly"
version = "0.1.0"
edition = "2021"

[dependencies]
elliptic-curve = { version = "0.13", features = ["arithmetic"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bls12_381_plus = "0.8"
jubjub = { version = "0.10", git = "https://github.com/LIT-Protocol/jubjub.git" }
k256 = "0.13"
p256 = "0.13"
p384 = "0.13"
vsss-rs = { version = "3.3.4", features = ["curve25519"] }
ed448-goldilocks-plus = "0.11"
rand_chacha = "0.3"
rstest = "0.18"
serde_json = "1.0"
serde_bare = "0.5"
